--- a/index.html
+++ b/index.html
@@ -65,12 +65,12 @@
 
 <!-- Google Analytics 4 -->
 <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-XXXXXXXXXX"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-GKGQWV5HBD"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
-  gtag('config', 'G-XXXXXXXXXX');
+  gtag('config', 'G-GKGQWV5HBD');
 </script>
 
 <!-- Custom Analytics Tracking -->
