Add enhanced device fingerprinting for visitor identification
- Add comprehensive device fingerprinting without personal data
- Track returning visitors with confidence scores
- Detect behavioral patterns (mouse, keyboard, scroll)
- Identify social media presence and browser extensions
- Network fingerprinting for connection analysis
- Font and audio fingerprinting for device uniqueness
- Legal and ethical visitor identification system

--- a/index.html
+++ b/index.html
@@ -76,6 +76,9 @@
 <!-- Custom Analytics Tracking -->
 <script src="/assets/js/static-analytics.js"></script>
 
+<!-- Enhanced Fingerprinting -->
+<script src="/assets/js/enhanced-fingerprinting.js"></script>
+
 <!-- GeoJSON support via Leaflet -->
 
 
