Update header with current Google position and IBM Research experience

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   
 </title>
 <meta name="author" content="Ahmad Faraz Khan">
-<meta name="description" content="Ahmad Faraz Khan - CS Ph.D. candidate @ Virginia Tech - ML Systems Researcher
+<meta name="description" content="Ahmad Faraz Khan - SWE Intern PhD @ Google | ex-Research Intern IBM Research | Email: ahmadfk@vt.edu | CS@VT ML Systems Researcher
 ">
 
   <meta name="keywords" content="Ahmad Faraz Khan, Machine Learning Systems, Federated Learning">
@@ -969,7 +969,7 @@ Looking forward to presenting this work and continuing our research journey toge
       © Copyright 2025
       Ahmad
       Faraz
-      Khan. CS Ph.D. candidate @ Virginia Tech - ML Systems Researcher
+      Khan. SWE Intern PhD @ Google | ex-Research Intern IBM Research | Email: ahmadfk@vt.edu | CS@VT ML Systems Researcher
 
       
       
